updated export function; working at saving images
refs #370

Change-Id: Ia0c65e56a0653e12c25fc0e6394c7b60a5e97f2d

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -19,6 +19,9 @@ $project<br/>
 $exportDate<br/>
 $createdDate<br />
 $haleVers<br/>
+#if($pi.getDescription())
+	$description
+#end
 </p>
 
 </body>
