currend work status; included images and added links
refs #370

Change-Id: I8c2aadb01724e643e7cd2475446733fb415b3260

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -22,6 +22,24 @@ $haleVers<br/>
 #if($pi.getDescription())
 	$description
 #end
+<br />
+Target Feature Types this Mapping covers:
+<ul>
+ #foreach ($linkname in $linklist)
+   $linkname
+ #end
+</ul>
+<br />
+Feature Types:<br />
+#foreach ($image in $images)
+  <img alt="" src="$image"><br />
+#end
+
+<br />
+Property Types:<br />
+#foreach ($propImage in $propImages)
+  <img alt="" src="$propImage"><br />
+#end
 </p>
 
 </body>
