support cell explanation in alignment html export
refs #370
refs #374

Change-Id: I88bd2398c9adf3fdaca5728e8220c01abd060c9c
Reviewed-on: http://gerrit.esdi-community.eu/769
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -15,9 +15,14 @@
 #macro(images $cell)
 <div class="cell">
 	<img src='$cell.getImageLocation()'>
+	#if ($cell.explanation) 
+	<br />
+	<p class="explanation">$cell.explanation</p>
+	#end
 </div>
 <br />
 #end
+
 <h1>Mapping Documentation</h1>
 <p>
 $author<br/>
