renamed images macro to cell_info
refs #370

Change-Id: Ibecddb1d5654f1826877fad31ebdb7f14a2d1fd4

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -12,7 +12,7 @@
 
 <body>
 ## macro definitions:
-#macro(images $cell)
+#macro(cell_info $cell)
 <div class="cell">
 	<img src='$cell.getImageLocation()'>
 	#if ($cell.explanation) 
@@ -51,10 +51,10 @@ $haleVers<br/>
 #set($propCells = $typeCell.getPropertyCellsInfo())
   <a name='link_$typeCell.getId()'></a>
   <h2>$typeCell.getSourceName() to $typeCell.getTargetName()</h2>
-  #images($typeCell)
+  #cell_info($typeCell)
   <div style="margin-left: 20px;">
   #foreach($propCell in $propCells)
-    #images($propCell)
+    #cell_info($propCell)
   #end
   </div>
 #end
