added first implementation to distinguish string/html explanations
refs #370

Change-Id: I6e5bc252685fa2ced2cec3935cdf4ee8df3a01d9

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -15,9 +15,12 @@
 #macro(cell_info $cell)
 <div class="cell">
 	<img src='$cell.getImageLocation()'>
-	#if ($cell.explanation) 
-	<br />
-	<p class="explanation">$cell.explanation</p>
+	#if ($cell.explanationAsHtml)
+		<br />
+		<p class="explanation">$cell.explanationAsHtml</p>
+	#elseif ($cell.explanation)
+		<br />
+		<p class="explanation">$cell.explanation</p>
 	#end
 </div>
 <br />
