width constraint for html explanations in exported doc
Change-Id: I9faf4b17d59f06198aa4cee32b5b1bdf2828bdc5
Reviewed-on: http://gerrit.esdi-community.eu/1058
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -15,12 +15,13 @@
 #macro(cell_info $cell)
 <div class="cell">
 	<img src='$cell.getImageLocation()'>
+	<br />
 	#if ($cell.explanationAsHtml)
+		<div class="explanation">$cell.explanationAsHtml</div>
 		<br />
-		<div>$cell.explanationAsHtml</div>
 	#elseif ($cell.explanation)
-		<br />
 		<p class="explanation">$cell.explanation</p>
+		<br />
 	#end
 </div>
 <br />
