--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -29,25 +29,35 @@
 
 <h1>Mapping Documentation</h1>
 <p>
-<table cellpadding="3">
+<table cellpadding="3" class="intro">
+#if ($pi.author)
 <tr>
 	<th>Project Author: </th>	<td>$pi.getAuthor()</td>
 </tr>
+#end
+#if ($pi.name)
 <tr>
 	<th>Project Name: </th>	<td>$pi.getName()</td>
 </tr>
+#end
+#if ($exportDate)
 <tr>
 	<th>Export Date: </th>	<td>$exportDate</td>
 </tr>
+#end
+#if ($createdDate)
 <tr>
 	<th>Creation Date: </th>	<td>$createdDate</td>
 </tr>
+#end
+#if ($pi.haleVersion)
 <tr>
 	<th>Hale Version: </th>	<td>$pi.getHaleVersion()</td>
 </tr>
+#end
 #if($pi.getDescription())
 <tr>
-	<th>Description: </th> <td>$pi.getDescription()</td>
+	<th>Description: </th> <td style="white-space: pre-wrap;">$pi.getDescription()</td>
 </tr>
 #end
 </table>
