use a login page instead of basic auth by default
Using the login form now a login to all wars is performed when
logging in to one war (those that use Secured***ApplicationContext).
This is achieved by using a remember-me cookie, with / as fixed
path for all wars. The cookie only lives while the browser runs,
also the remember me key token is generated randomly for the life
of the JVM instance - so there is no danger of different HALE
server instances being authenticated through the same cookie.
Logout is performed using a special service, that tracks sessions
associated to a user in different wars, and invalidates all of them
during logout.

refs #507

Change-Id: I24151023e411968f0284dfe8b6733de077d15120
Reviewed-on: http://gerrit.esdi-community.eu/1583
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
@@ -14,6 +14,7 @@
 		<h1 id="logo"><a href="/" title="Home page">
 		<span id="logo1" />
 		<span id="logo-title" wicket:id="base-application-title">HALE Web</span></a></h1>
+		<span wicket:id="loginLogoutPanel" style="float:right;"><a wicket:id="loginLogout"><span wicket:id="label">Login/Logout</span></a></span>
 	</div>
 	<div id="breadcrumb">
 		<span wicket:id="breadcrumb" title="Home page">Home</span>
