some cosmetical changes
Change-Id: Iaa647bc08a29f94676ec75e0a9529b1b25bb5803

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/LoginPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/LoginPage.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<wicket:extend>
+		<h2>Login</h2>
 		<div>
 			<form name='f' action='j_spring_security_check' method='post'>
 				<table class="no-stretch">
