--- a/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
@@ -11,10 +11,11 @@
 </head>
 <body>
 	<div id="header">
-		<h1 id="logo"><a href="/" title="Home page">
+		<div id="mainheader"><h1 id="logo"><a href="/" title="Home page">
 		<span id="logo1" />
 		<span id="logo-title" wicket:id="base-application-title">HALE Web</span></a></h1>
-		<span wicket:id="loginLogoutPanel" style="float:right;"><a wicket:id="loginLogout"><span wicket:id="label">Login/Logout</span></a></span>
+		</div>
+		<div id="auxheader"><span wicket:id="loginLogoutPanel"><a wicket:id="loginLogout"><span wicket:id="label">Login/Logout</span></a></span></div>	
 	</div>
 	<div id="breadcrumb">
 		<span wicket:id="breadcrumb" title="Home page">Home</span>
