added description for file upload field
refs #503

Change-Id: Iff8a839e068333ee1ad69827c44d6dc196a2f085

--- a/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/pages/UploadPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.projects.war/src/eu/esdihumboldt/hale/server/projects/war/pages/UploadPage.html
@@ -23,6 +23,7 @@
 					<span class="field-msg" wicket:id="identifierMessage"></span>
 				</p>
 				<p>
+					Project archive (ZIP):<br />
 					<input wicket:id="file" type="file"/>
 				</p>
 				<p style="text-align: right; margin-bottom: 0px;">
