--- a/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/TransformationsPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/TransformationsPage.html
@@ -5,14 +5,16 @@
 	xmlns:wicket="http://wicket.sourceforge.net/"
 	xml:lang="en">
 <head>
-	<title>Transformers</title>
+	<title>Transformations</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 </head>
 <body>
 	<wicket:extend>
-		<h2>Transformers</h2>
-		<p>...</p>
+		<h2>Transformations</h2>
+		<p>Transformation projects available on the server.</p>
+		
+		<div wicket:id="transformations"></div>
 	</wicket:extend>
 </body>
 </html>
