--- a/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/StatusPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/StatusPage.html
@@ -11,8 +11,36 @@
 <body>
 	<wicket:extend>
 		<h2>Transformation Status</h2>
-		
+
+		<p wicket:id="status">[Status]</p>
+
 		<div wicket:id="jobs"></div>
+
+		<div wicket:id="result">
+			<div wicket:id="update">
+				<fieldset>
+					<legend>Results</legend>
+
+					<p>
+						<a wicket:id="log" title="Download report"><img
+							src="images/file.gif" /> Report</a>
+					</p>
+
+					<p>
+						<span wicket:id="file"><a wicket:id="download"
+							title="Download file"><img src="images/save.gif" /> <span
+								wicket:id="name"></span></a><br /></span>
+					</p>
+				</fieldset>
+			</div>
+		</div>
+		
+		<p>&nbsp;</p>
+
+		<p style="font-size: smaller;">
+			Transformation workspace expires after <span wicket:id="leaseEnd">[Somewhere
+				in time]</span>.
+		</p>
 	</wicket:extend>
 </body>
 </html>
