copyright hardcoded in BasePage.html
Change-Id: I06a3bb645314cc40a0ee2c7ab357499f3f5e327d
Reviewed-on: http://gerrit.esdi-community.eu/1647
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webapp.branding.default/src/eu/esdihumboldt/hale/server/webapp/pages/BasePage.html
@@ -25,8 +25,7 @@
 		<p>&nbsp;</p>
 	</div>
 	<div id="footer">
-		<p id="footer-copyright">Copyright &copy; 2006-<span wicket:id="base-year">2012</span>
-		HUMBOLDT Consortium, <a href="http://www.dhpanel.eu">data harmonisation panel</a></p>
+		<p id="footer-copyright">Copyright &copy; 2012 <a href="http://www.dhpanel.eu">data harmonisation panel</a></p>
 		<p id="footer-website"><a href="http://www.esdi-community.eu">www.esdi-community.eu</a></p>
 		<p>&nbsp;</p>
 	</div>
