basic support for configuration of export parameters
...for web interface based transformation.

refs #505

Change-Id: I14393880773cc6ce78b156088ab4e2221c28505f

--- a/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/UploadPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.webtransform.war/src/eu/esdihumboldt/hale/server/webtransform/war/pages/UploadPage.html
@@ -38,6 +38,18 @@
 								</wicket:container>
 							</optgroup>
 						</select>
+						
+						<table wicket:id="config" class="no-stretch">
+							<tbody>
+								<tr wicket:id="param">
+									<td wicket:id="name">[Name]</td>
+									<td>
+										<input wicket:id="field" />
+										<select wicket:id="contentType"></select>
+									</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</fieldset>
 				
