improved tabbed panel styling
Change-Id: I600863d3784a4eeaa95757c4fa09bb3e3001c661

--- a/server/plugins/eu.esdihumboldt.hale.server.status.war/src/eu/esdihumboldt/hale/server/status/war/pages/StatusPage.html
+++ b/server/plugins/eu.esdihumboldt.hale.server.status.war/src/eu/esdihumboldt/hale/server/status/war/pages/StatusPage.html
@@ -13,7 +13,7 @@
 	<wicket:extend>
 		<h2>Server status</h2>
 		
-		<div wicket:id="tabs"></div>
+		<div wicket:id="tabs" class="tabpanel"></div>
 	</wicket:extend>
 </body>
 </html>
