added Before and after page in New in 2.5
...that compares 2.1 with 2.5 screenshots.

refs #501

Change-Id: I75fc3c767dfcac06c17e426be62a73b4debda5dc

--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/html/map_view.html
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/html/map_view.html
@@ -29,7 +29,7 @@
 	</p>
 	<div>
 		<img src="../images/def_geom.png"
-			title="Setting the default geometry property of a type">
+			title="Setting the default geometry property of a type" class="fit">
 	</div>
 	<p>
 		The source and transformed data can be displayed together in the map,
@@ -39,7 +39,7 @@
 		menu.
 	</p>
 	<div>
-		<img src="../images/split_data.png">
+		<img src="../images/split_data.png" class="fit">
 	</div>
 	<p>
 		Selecting instances is possible by clicking on them. In the above
@@ -67,7 +67,7 @@
 	</p>
 	<div>
 		<img src="../images/data_synch.png"
-			title="Map selection based on data view">
+			title="Map selection based on data view" class="fit">
 	</div>
 	
 	<br>
