--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/html/styling_data.html
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/html/styling_data.html
@@ -24,7 +24,7 @@
 		can define complex styles with filter rules.
 	</p>
 	<div>
-		<img src="../images/edit_style.png" title="Change style dialog">
+		<img src="../images/edit_style.png" title="Change style dialog" class="fit">
 	</div>
 	<p>
 		It is also possible to <a class="command-link"
@@ -37,7 +37,7 @@
 		progress of your mapping endeavor.
 	</p>
 	<div>
-		<img src="../images/map_rules.png">
+		<img src="../images/map_rules.png" class="fit">
 	</div>
 </body>
 </html>
