--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/template.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Mapping Documentation</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<link rel="stylesheet" type="text/css" href="$filesDir/style.css">
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+<link rel="stylesheet" type="text/css" href="$filesDir/style.css" />
 <style type="text/css">
 /* ... place for extra formats ... */
 </style>
@@ -14,7 +14,7 @@
 ## macro definitions:
 #macro(cell_info $cell)
 <div class="cell">
-	<img src='$cell.getImageLocation()'>
+	<img src='$cell.getImageLocation()' />
 	<br />
 	#if ($cell.explanationAsHtml)
 		<div class="explanation">$cell.explanationAsHtml</div>
@@ -22,6 +22,12 @@
 	#elseif ($cell.explanation)
 		<p class="explanation">$cell.explanation</p>
 		<br />
+	#end
+	#if ($cell.notes)
+		<div><b>Notes:</b><br />
+			<p class="notes">$cell.notes</p>
+			<br />
+		</div>
 	#end
 </div>
 <br />
@@ -69,7 +75,7 @@
   <a href='#link_$typeCell.getId()'>
 	  <span class="cell">
 	      <!-- img src='$filesDir/int_link.png' alt='linkpicture' -->
-	      <img src='$typeCell.getImageLocation()'>
+	      <img src='$typeCell.getImageLocation()' />
 	  </span>
   </a>
 </div>
